--- a/Assignment-HTML/index2.html
+++ b/Assignment-HTML/index2.html
@@ -1,7 +1,9 @@
 <!--
 Q.=> purpose of Comments in HTML:
 
-Comments in HTML are used to add notes, explanations, or reminders within the code that are not visible in the web browser when the page is rendered. They help developers understand the structure and functionality of the code, making it easier to maintain, debug, or collaborate with others.
+Comments in HTML are used to add notes, explanations, or reminders within the code that are not visible in the web browser 
+when the page is rendered. They help developers understand the structure and functionality of the code, making it easier to
+maintain, debug, or collaborate with others.
 
 The main purposes of comments in HTML are:
 
